--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - name: get dr_Front_ComponentStoryBook code
         uses: actions/checkout@v3
         with:
-          repository: ${{github.secret.DR_REGISTORY}}
-          token: ${{github.secret.DRTOKEN}}
+          repository: ${{github.secrets.DR_REGISTORY}}
+          token: ${{github.secrets.DRTOKEN}}
           ref: development
 
       - name: github pages
