--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: github pages
         uses: crazy-max/ghaction-github-pages@v3.0.0
-        width:
+        with:
           build_dir: build
