--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,6 @@ jobs:
       - name: github pages
         uses: crazy-max/ghaction-github-pages@v3.0.0
         with:
-          build_dir: build
+          build_dir: storybook-static
+        env:
+          GITHUB_TOKEN: ${{secrets.MY_TOKEN}}
